# xdesktop

server/: database.py  generate_secret_key.py  main.py  models.py  pyproject.toml  schemas.py
server/routers/: auth.py  cloud.py
server/script/: add_user.py
server/utils/: auth.py  file_operations.py  vuefinder.py  wsgi_app.py
utils/: file_operations.py
web/: package-lock.json  package.json  uno.config.ts  vite.config.ts
web/src/: main.ts
web/src/assets/: main.css
web/src/router/: index.ts
web/src/store/: auth.ts
web/src/types/: vuefinder.d.ts
web/src/utils/: axiosInstance.ts
web/src/views/: explorer.vue  login.vue
wsgiserver/: app.py  main.py
