[tool.poetry]
name = "vuefinder"
version = "0.1.0"
description = ""
authors = ["kk <kanbang@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
werkzeug = "^3.1.2"
fs = "^2.4.16"
pathvalidate = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
